--- a/index.html
+++ b/index.html
@@ -228,20 +228,16 @@ document.addEventListener("DOMContentLoaded", async () => {
     </a>
   </div>
 </div>
-  <div id="movies">
+<div id="movies">
   <h2 class="text-white text-base font-normal mb-3">Categorías</h2>
   <div class="flex overflow-x-auto space-x-3 scrollbar-hide pb-2">
-
-    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-red-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-red-700 transition cursor-pointer">
-      <a href="Categorias/serie/index.html" class="text-center text-xs">SERIES</a>
-    </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-red-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-red-700 transition cursor-pointer">
       <a href="Categorias/accion/index.html" class="text-center text-xs">Acción</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-orange-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-orange-700 transition cursor-pointer">
-      <a href="Categorias/action&adventure/index.html" class="text-center text-xs">Action & Adventure</a>
+      <a href="Categorias/action&adventure/index.html" class="text-center text-[10px] leading-tight">Action & Adventure</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-yellow-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-yellow-600 transition cursor-pointer">
@@ -257,7 +253,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-indigo-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-indigo-700 transition cursor-pointer">
-      <a href="Categorias/cienciaficcion/index.html" class="text-center text-xs">Ciencia Ficción</a>
+      <a href="Categorias/cienciaficcion/index.html" class="text-center text-[10px] leading-tight">Ciencia Ficción</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-pink-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-pink-700 transition cursor-pointer">
@@ -284,16 +280,40 @@ document.addEventListener("DOMContentLoaded", async () => {
       <a href="Categorias/fantasia/index.html" class="text-center text-xs">Fantasía</a>
     </section>
 
-    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-slate-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-slate-700 transition cursor-pointer">
-      <a href="Categorias/misterio/index.html" class="text-center text-xs">Misterio</a>
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-amber-700 flex items-center justify-center text-white font-bold shadow-md hover:bg-amber-800 transition cursor-pointer">
+      <a href="Categorias/historia/index.html" class="text-center text-xs">Historia</a>
+    </section>
+
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-green-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-green-600 transition cursor-pointer">
+      <a href="Categorias/kids/index.html" class="text-center text-xs">Kids</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-amber-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-amber-700 transition cursor-pointer">
       <a href="Categorias/musica/index.html" class="text-center text-xs">Musical</a>
     </section>
 
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-slate-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-slate-700 transition cursor-pointer">
+      <a href="Categorias/misterio/index.html" class="text-center text-xs">Misterio</a>
+    </section>
+
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-orange-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-orange-600 transition cursor-pointer">
+      <a href="Categorias/peliculadetv/index.html" class="text-center text-[10px] leading-tight">Películas de TV</a>
+    </section>
+
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-pink-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-pink-600 transition cursor-pointer">
+      <a href="Categorias/reality/index.html" class="text-center text-xs">Reality</a>
+    </section>
+
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-rose-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-rose-600 transition cursor-pointer">
+      <a href="Categorias/romance/index.html" class="text-center text-xs">Romance</a>
+    </section>
+
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-lime-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-lime-700 transition cursor-pointer">
-      <a href="Categorias/sci-fi&fantasy/index.html" class="text-center text-xs">Sci-Fi & Fantasy</a>
+      <a href="Categorias/sci-fi&fantasy/index.html" class="text-center text-[10px] leading-tight">Sci-Fi & Fantasy</a>
+    </section>
+
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-gray-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-gray-600 transition cursor-pointer">
+      <a href="Categorias/soap/index.html" class="text-center text-xs">Soap</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-fuchsia-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-fuchsia-700 transition cursor-pointer">
@@ -304,9 +324,17 @@ document.addEventListener("DOMContentLoaded", async () => {
       <a href="Categorias/terror/index.html" class="text-center text-xs">Terror</a>
     </section>
 
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-red-800 flex items-center justify-center text-white font-bold shadow-md hover:bg-red-900 transition cursor-pointer">
+      <a href="Categorias/war%26politics/index.html" class="text-center text-[10px] leading-tight">War & Politics</a>
+    </section>
+
+    <section class="flex-shrink-0 w-14 h-14 rounded-full bg-yellow-800 flex items-center justify-center text-white font-bold shadow-md hover:bg-yellow-900 transition cursor-pointer">
+      <a href="Categorias/western/index.html" class="text-center text-xs">Western</a>
+    </section>
+
   </div>
 </div>
-
+	
 <!-- Carrusel vertical de Películas Recientes -->
 <section class="mb-8">
   <div class="flex items-center justify-between mb-4">
@@ -829,3 +857,4 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </body>
 </html>
+
