--- a/HOME/Buscador.html
+++ b/HOME/Buscador.html
@@ -90,7 +90,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/nfY0LdXZzggFKfjhyHVEHZfO484.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Háblame 2023</span>
-    <span class="hidden">ablame La solitaria adolescente Mia se engancha a la emoción de invocar espíritus utilizando una mano embalsamada, pero cuando se enfrenta a un alma que dice ser su madre muerta, desata una plaga de fuerzas sobrenaturales y se debate entre decidir en quién puede confiar: en los vivos o en los muertos.</span>
+    <span class="hidden">talk to me ablame La solitaria adolescente Mia se engancha a la emoción de invocar espíritus utilizando una mano embalsamada, pero cuando se enfrenta a un alma que dice ser su madre muerta, desata una plaga de fuerzas sobrenaturales y se debate entre decidir en quién puede confiar: en los vivos o en los muertos.</span>
   </a>
 </li>
 <!--FIN--><!-- Animales Fantasticos 2: Los Crimenes de Grindelwald -->
@@ -7250,7 +7250,7 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
   <a href="../Peliculas/pelicula278.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/nMWGHdVUrGQwo1SQ4JdDUv556L8.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
     <span class="hidden">La gran aventura de Billy y Mandy contra el coco 2007</span>
-    <span class="hidden"></span>
+    <span class="hidden">las sombrias aventuras de </span>
   </a>
 </li>
 <!--FIN--><!-- Superman y Lois -->
@@ -7274,7 +7274,7 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
   <a href="../Peliculas/pelicula277.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/pk67rEjEZnouTu1gnhrIC0aqNra.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
     <span class="hidden">Power Rangers: La película 1995</span>
-    <span class="hidden">Unos adolescentes con mucha energía buscan una misteriosa fuente de energía con el fin de evitar que un antiguo villano conquiste la Tierra.</span>
+    <span class="hidden">pawer Unos adolescentes con mucha energía buscan una misteriosa fuente de energía con el fin de evitar que un antiguo villano conquiste la Tierra.</span>
   </a>
 </li>
 <!--FIN--><!-- Exterminio -->
@@ -7282,7 +7282,7 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
   <a href="../Peliculas/pelicula276.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/sIGsLU7hMDVKhGKsRFcFxUAtFyT.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
     <span class="hidden">Exterminio 2002</span>
-    <span class="hidden">Cuatro semanas después de que un misterioso e incurable virus se extendiera por todo el Reino Unido, un puñado de supervivientes intentan encontrar refugio.</span>
+    <span class="hidden">28 dias despues Cuatro semanas después de que un misterioso e incurable virus se extendiera por todo el Reino Unido, un puñado de supervivientes intentan encontrar refugio.</span>
   </a>
 </li>
 <!--FIN--><!-- Mansion Foster Para Amigos Imaginarios: Destino Imaginacion -->
