--- a/Categorias/documental/index.html
+++ b/Categorias/documental/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- MH370: El avion que desaparecio -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tim Burton : Un monstre de cinema -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie122.html">
+    <img src="https://image.tmdb.org/t/p/original/i6IvM8GwiS1GvrfspncmwGMtLr6.jpg" alt="Tim Burton : Un monstre de cinéma" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Tim Burton : Un monstre de cinéma</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- MH370: El avion que desaparecio -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie119.html">
     <img src="https://image.tmdb.org/t/p/original/lVyBjky45Yqay2G3DaN6pkFCaUH.jpg" alt="MH370: El avión que desapareció" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
