Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tim Burton : Un monstre de cinema -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Regalo maldito -->
+<li>
+  <a href="../Peliculas/movie123.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kn63tQpkGoOqbncnrGhpr1tFHsJ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Regalo maldito 2025</span>
+    <span class="hidden">Cuando Polly recibe una misteriosa caja de una inesperada visitante nocturna, viene con la simple instrucción de colocar tres cosas dentro: algo que necesites, algo que odies y algo que ames. Lo que comienza como un extraño ritual se convierte rápidamente en una pesadilla. Atrapada en un mundo aterrador donde la realidad se tuerce y la memoria la traiciona, Polly debe tomar una serie de decisiones imposibles. A medida que el tiempo se escapa, se ve obligada a enfrentarse a la oscuridad no sólo a su alrededor, sino también en su interior, antes de que consuma todo y a todos los que ha conocido.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tim Burton : Un monstre de cinema -->
 <li>
   <a href="../Peliculas/movie122.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
