--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La telarana de Charlotte -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Barbie: Moda Magica en Paris -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie124.html">
+    <img src="https://image.tmdb.org/t/p/original/Am0sUl4S5PxKHQxIB3ktKWJwYAq.jpg" alt="Barbie: Moda Mágica en París" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Barbie: Moda Mágica en París</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- La telarana de Charlotte -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie121.html">
     <img src="https://image.tmdb.org/t/p/original/zI6O0Bf3BB3eSxp04Lkz0ficrvm.jpg" alt="La telaraña de Charlotte" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
