--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Barbie: Moda Magica en Paris -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Taxi -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie125.html">
+    <img src="https://image.tmdb.org/t/p/original/6dvI9fy3Rr6WcCH2oOdW2h56G7K.jpg" alt="Taxi" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Taxi</div>
+  <div class="text-xs text-white/70">2004</div>
+</article><!-- Barbie: Moda Magica en Paris -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie124.html">
     <img src="https://image.tmdb.org/t/p/original/Am0sUl4S5PxKHQxIB3ktKWJwYAq.jpg" alt="Barbie: Moda Mágica en París" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
