--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Taxi -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Limpia -->
+<li>
+  <a href="../Peliculas/movie126.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wHK4R14rjhoDIBwmk9uwTNpopFz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Limpia 2025</span>
+    <span class="hidden">La historia de la intensa relación entre Estela, una trabajadora doméstica, y la niña de seis años a la que cuida día y noche. A medida que su vínculo se hace más estrecho, construyen un mundo secreto y dependiente que las llevará a un resultado inevitable... best-seller de Alia Trabucco.</span>
+  </a>
+</li>
+<!--FIN--><!-- Taxi -->
 <li>
   <a href="../Peliculas/movie125.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
