Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 2012 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Maestro Borracho -->
+<li>
+  <a href="../Peliculas/movie128.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wszKyngvXqBp5trBSUkllHQenpW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Maestro Borracho 1978</span>
+    <span class="hidden">La trama se centra en un joven y travieso Wong Fei Hung (a veces denominado como "Freddie Wong"). Wong se mete en una serie de problemas. En primer lugar, le enseña un abusivo maestro asistente de artes marciales una lección después que este humillara a un pobre campesino y lo estafara. Después, molesta a una mujer para impresionar a sus amigos y sólidamente es azotado por su tutora mayor como resultado; su vergüenza se agrava cuando estas dos se revelan más tarde como su tía y su prima de visita, a quienes no había conocido antes. Por último, él vence a un gamberro que es el hijo de un hombre influyente en la ciudad. Su padre decide castigarlo por su comportamiento haciéndolo a entrenar más difícil en las artes marciales.</span>
+  </a>
+</li>
+<!--FIN--><!-- 2012 -->
 <li>
   <a href="../Peliculas/movie127.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
