Crear/Actualizar Categorias/drama/index.html

--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- O'Dessa -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Golpe de superacion -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie131.html">
+    <img src="https://image.tmdb.org/t/p/original/xcXq6q0p6QEXZC1o8UIFHt3L1EE.jpg" alt="Golpe de superación" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Golpe de superación</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- O'Dessa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie130.html">
     <img src="https://image.tmdb.org/t/p/original/xbdRxyr1u5dbhvMm14w7J1jJWQS.jpg" alt="O'Dessa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
