--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- O'Dessa -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Golpe de superacion -->
+<li>
+  <a href="../Peliculas/movie131.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xcXq6q0p6QEXZC1o8UIFHt3L1EE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Golpe de superación 2025</span>
+    <span class="hidden">Ganador del Globo de Oro, Ving Rhames protagoniza una historia electrizante sobre Toni, una boxeadora decidida a derribar barreras. Cuando un ex campeón rudo acepta entrenarla, surge una alianza inesperada</span>
+  </a>
+</li>
+<!--FIN--><!-- O'Dessa -->
 <li>
   <a href="../Peliculas/movie130.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
