--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -77,7 +77,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Regalo maldito -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La bruja de Blair -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie132.html">
+    <img src="https://image.tmdb.org/t/p/original/umYep3ZxgnyWZ2HZIvnaklynJjO.jpg" alt="La bruja de Blair" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La bruja de Blair</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Regalo maldito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie123.html">
     <img src="https://image.tmdb.org/t/p/original/kn63tQpkGoOqbncnrGhpr1tFHsJ.jpg" alt="Regalo maldito" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
