Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Golpe de superacion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La bruja de Blair -->
+<li>
+  <a href="../Peliculas/movie132.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/umYep3ZxgnyWZ2HZIvnaklynJjO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La bruja de Blair 2016</span>
+    <span class="hidden">Un grupo de estudiantes universitarios se aventuran en Black Hills Forest en Maryland para descubrir los misterios que envuelven la desaparición de Heather, la hermana de James Donahue, quien muchos creen está conectada a la leyenda de la Bruja de Blair después de su desaparición hace 20 años. Al principio el grupo tiene esperanzas, especialmente cuando un par de locales se ofrecen a actuar como guías a través del oscuro bosque, pero mientras la interminable noche avanza, el grupo es atormentado por una presencia amenazante. Lentamente, el grupo empieza a entender que la leyenda es muy real y más siniestra de lo que pudieron haber imaginado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Golpe de superacion -->
 <li>
   <a href="../Peliculas/movie131.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
