--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La bruja de Blair -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Truman Show: Historia de una Vida -->
+<li>
+  <a href="../Peliculas/movie133.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2lilvy7r5TR0uLI8eCtVqkUiTls.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">The Truman Show: Historia de una Vida 1998</span>
+    <span class="hidden">Truman Burbank es un hombre corriente y algo ingenuo que ha vivido toda su vida en uno de esos pueblos donde nunca pasa nada. Sin embargo, unos extraños sucesos le hacen sospechar que algo anormal está ocurriendo.</span>
+  </a>
+</li>
+<!--FIN--><!-- La bruja de Blair -->
 <li>
   <a href="../Peliculas/movie132.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
