--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- The Truman Show: Historia de una Vida -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Colonia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie134.html">
+    <img src="https://image.tmdb.org/t/p/original/uPld99AspbPcTI979EsOj3faE9r.jpg" alt="La Colonia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La Colonia</div>
+  <div class="text-xs text-white/70">1997</div>
+</article><!-- The Truman Show: Historia de una Vida -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie133.html">
     <img src="https://image.tmdb.org/t/p/original/2lilvy7r5TR0uLI8eCtVqkUiTls.jpg" alt="The Truman Show: Historia de una Vida" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
