--- a/Plataforma/sony/index.html
+++ b/Plataforma/sony/index.html
@@ -216,7 +216,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- 2012 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Colonia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie134.html">
+    <img src="https://image.tmdb.org/t/p/original/uPld99AspbPcTI979EsOj3faE9r.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La Colonia</div>
+  <div class="text-xs text-white/70">1997</div>
+</article><!-- 2012 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie127.html">
     <img src="https://image.tmdb.org/t/p/original/gWE2GIrIqqf1OLV2Talxph11MC.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
