--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Truman Show: Historia de una Vida -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Colonia -->
+<li>
+  <a href="../Peliculas/movie134.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/uPld99AspbPcTI979EsOj3faE9r.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Colonia 1997</span>
+    <span class="hidden">Jack Quinn es un agente antiterrorista que va tras la pista de Stavros, un peligroso terrorista, en la que será su última misión. Quinn fracasará en su intento de dar caza a Stavros y quedará recluido de por vida en La Colonia. La Colonia es una especie de retiro forzado para “agentes fracasados”, allí la única obsesión de Quinn será escapar y rescatar a su esposa embarazada, que ha sido capturada por su mortal enemigo Stavros. Para ello contará con la ayuda de Yazz  un traficante de armas poco cuerdo y bastante excéntrico.</span>
+  </a>
+</li>
+<!--FIN--><!-- The Truman Show: Historia de una Vida -->
 <li>
   <a href="../Peliculas/movie133.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
