Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Turbo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La vida de Calabacin -->
+<li>
+  <a href="../Peliculas/movie137.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dKRtEi8YleBEZeBGOsYzoq8QW3h.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La vida de Calabacín 2016</span>
+    <span class="hidden">Después de la muerte de su madre, Zucchini se hace amigo de un amable policía, Raymond, que lo acompaña a su nuevo hogar de acogida lleno de otros huérfanos de su edad. Allí, con la ayuda de sus nuevos amigos, Zucchini finalmente aprende a confiar y amar mientras busca una nueva familia propia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Turbo -->
 <li>
   <a href="../Peliculas/movie136.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
