--- a/index.html
+++ b/index.html
@@ -233,103 +233,103 @@ document.addEventListener("DOMContentLoaded", async () => {
   <div class="flex overflow-x-auto space-x-3 scrollbar-hide pb-2">
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-red-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-red-700 transition cursor-pointer">
-      <a href="Categorias/accion/index.html" class="text-center text-xs">Acción</a>
+      <a href="CatergoriasBase/accion/index.html" class="text-center text-xs">Acción</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-orange-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-orange-700 transition cursor-pointer">
-      <a href="Categorias/action&adventure/index.html" class="text-center text-[10px] leading-tight">Action & Adventure</a>
+      <a href="CatergoriasBase/action&adventure/index.html" class="text-center text-[10px] leading-tight">Action & Adventure</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-yellow-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-yellow-600 transition cursor-pointer">
-      <a href="Categorias/animacion/index.html" class="text-center text-xs">Animación</a>
+      <a href="CatergoriasBase/animacion/index.html" class="text-center text-xs">Animación</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-green-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-green-700 transition cursor-pointer">
-      <a href="Categorias/aventura/index.html" class="text-center text-xs">Aventura</a>
+      <a href="CatergoriasBase/aventura/index.html" class="text-center text-xs">Aventura</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-gray-700 flex items-center justify-center text-white font-bold shadow-md hover:bg-gray-800 transition cursor-pointer">
-      <a href="Categorias/belica/index.html" class="text-center text-xs">Bélica</a>
+      <a href="CatergoriasBase/belica/index.html" class="text-center text-xs">Bélica</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-indigo-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-indigo-700 transition cursor-pointer">
-      <a href="Categorias/cienciaficcion/index.html" class="text-center text-[10px] leading-tight">Ciencia Ficción</a>
+      <a href="CatergoriasBase/cienciaficcion/index.html" class="text-center text-[10px] leading-tight">Ciencia Ficción</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-pink-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-pink-700 transition cursor-pointer">
-      <a href="Categorias/comedia/index.html" class="text-center text-xs">Comedia</a>
+      <a href="CatergoriasBase/comedia/index.html" class="text-center text-xs">Comedia</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-purple-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-purple-700 transition cursor-pointer">
-      <a href="Categorias/crimen/index.html" class="text-center text-xs">Crimen</a>
+      <a href="CatergoriasBase/crimen/index.html" class="text-center text-xs">Crimen</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-blue-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-blue-600 transition cursor-pointer">
-      <a href="Categorias/documental/index.html" class="text-center text-xs">Documental</a>
+      <a href="CatergoriasBase/documental/index.html" class="text-center text-xs">Documental</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-rose-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-rose-700 transition cursor-pointer">
-      <a href="Categorias/drama/index.html" class="text-center text-xs">Drama</a>
+      <a href="CatergoriasBase/drama/index.html" class="text-center text-xs">Drama</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-teal-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-teal-700 transition cursor-pointer">
-      <a href="Categorias/familia/index.html" class="text-center text-xs">Familia</a>
+      <a href="CatergoriasBase/familia/index.html" class="text-center text-xs">Familia</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-cyan-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-cyan-700 transition cursor-pointer">
-      <a href="Categorias/fantasia/index.html" class="text-center text-xs">Fantasía</a>
+      <a href="CatergoriasBase/fantasia/index.html" class="text-center text-xs">Fantasía</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-amber-700 flex items-center justify-center text-white font-bold shadow-md hover:bg-amber-800 transition cursor-pointer">
-      <a href="Categorias/historia/index.html" class="text-center text-xs">Historia</a>
+      <a href="CatergoriasBase/historia/index.html" class="text-center text-xs">Historia</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-green-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-green-600 transition cursor-pointer">
-      <a href="Categorias/kids/index.html" class="text-center text-xs">Kids</a>
+      <a href="CatergoriasBase/kids/index.html" class="text-center text-xs">Kids</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-amber-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-amber-700 transition cursor-pointer">
-      <a href="Categorias/musica/index.html" class="text-center text-xs">Musical</a>
+      <a href="CatergoriasBase/musica/index.html" class="text-center text-xs">Musical</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-slate-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-slate-700 transition cursor-pointer">
-      <a href="Categorias/misterio/index.html" class="text-center text-xs">Misterio</a>
+      <a href="CatergoriasBase/misterio/index.html" class="text-center text-xs">Misterio</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-orange-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-orange-600 transition cursor-pointer">
-      <a href="Categorias/peliculadetv/index.html" class="text-center text-[10px] leading-tight">Películas de TV</a>
+      <a href="CatergoriasBase/peliculadetv/index.html" class="text-center text-[10px] leading-tight">Películas de TV</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-pink-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-pink-600 transition cursor-pointer">
-      <a href="Categorias/reality/index.html" class="text-center text-xs">Reality</a>
+      <a href="CatergoriasBase/reality/index.html" class="text-center text-xs">Reality</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-rose-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-rose-600 transition cursor-pointer">
-      <a href="Categorias/romance/index.html" class="text-center text-xs">Romance</a>
+      <a href="CatergoriasBase/romance/index.html" class="text-center text-xs">Romance</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-lime-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-lime-700 transition cursor-pointer">
-      <a href="Categorias/sci-fi&fantasy/index.html" class="text-center text-[10px] leading-tight">Sci-Fi & Fantasy</a>
+      <a href="CatergoriasBase/sci-fi&fantasy/index.html" class="text-center text-[10px] leading-tight">Sci-Fi & Fantasy</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-gray-500 flex items-center justify-center text-white font-bold shadow-md hover:bg-gray-600 transition cursor-pointer">
-      <a href="Categorias/soap/index.html" class="text-center text-xs">Soap</a>
+      <a href="CatergoriasBase/soap/index.html" class="text-center text-xs">Soap</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-fuchsia-600 flex items-center justify-center text-white font-bold shadow-md hover:bg-fuchsia-700 transition cursor-pointer">
-      <a href="Categorias/suspense/index.html" class="text-center text-xs">Suspenso</a>
+      <a href="CatergoriasBase/suspense/index.html" class="text-center text-xs">Suspenso</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-black flex items-center justify-center text-white font-bold shadow-md hover:bg-gray-900 transition cursor-pointer">
-      <a href="Categorias/terror/index.html" class="text-center text-xs">Terror</a>
+      <a href="CatergoriasBase/terror/index.html" class="text-center text-xs">Terror</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-red-800 flex items-center justify-center text-white font-bold shadow-md hover:bg-red-900 transition cursor-pointer">
-      <a href="Categorias/war%26politics/index.html" class="text-center text-[10px] leading-tight">War & Politics</a>
+      <a href="CatergoriasBase/war%26politics/index.html" class="text-center text-[10px] leading-tight">War & Politics</a>
     </section>
 
     <section class="flex-shrink-0 w-14 h-14 rounded-full bg-yellow-800 flex items-center justify-center text-white font-bold shadow-md hover:bg-yellow-900 transition cursor-pointer">
-      <a href="Categorias/western/index.html" class="text-center text-xs">Western</a>
+      <a href="CatergoriasBase/western/index.html" class="text-center text-xs">Western</a>
     </section>
 
   </div>
@@ -341,7 +341,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     <h2 class="text-base sm:text-lg font-semibold">Recien Agregadas</h2>
    <button 
   class="text-xs sm:text-sm muted flex items-center gap-2 hover:text-yellow-400 transition" 
-  onclick="window.location.href='Categorias/movie/index.html'">
+  onclick="window.location.href='CatergoriasBase/movie/index.html'">
   Ver más ▸
 </button>
 
@@ -391,7 +391,7 @@ document.addEventListener("DOMContentLoaded", async () => {
       <h2 class="text-base sm:text-lg font-semibold">Series</h2>
      <button 
   class="text-xs sm:text-sm muted flex items-center gap-2 hover:text-yellow-400 transition" 
-  onclick="window.location.href='Categorias/serie/index.html'">
+  onclick="window.location.href='Categgorias/serie/index.html'">
   Ver más ▸
 </button>
 
@@ -682,7 +682,7 @@ async function cargarSeries() {
   if (!contenedor) return;
 
   try {
-    const url = "https://raw.githubusercontent.com/lzrdrz10/sv/main/Categorias/serie/index.html";
+    const url = "https://raw.githubusercontent.com/lzrdrz10/sv/main/CatergoriasBase/serie/index.html";
    const res = await fetch(url);
     if (!res.ok) throw new Error(`Error al cargar K-Dramas: ${res.status}`);
 
@@ -805,7 +805,7 @@ async function cargarPeliculasRecientes() {
   if (!contenedor) return;
 
   try {
-    const url = "https://raw.githubusercontent.com/lzrdrz10/sv/main/Categorias/movie/index.html";
+    const url = "https://raw.githubusercontent.com/lzrdrz10/sv/main/CatergoriasBase/movie/index.html";
     const res = await fetch(url);
     if (!res.ok) throw new Error(`Error al cargar películas: ${res.status}`);
 
@@ -857,4 +857,5 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </body>
 </html>
+
 
