--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ document.addEventListener("DOMContentLoaded", async () => {
       <h2 class="text-base sm:text-lg font-semibold">Series</h2>
      <button 
   class="text-xs sm:text-sm muted flex items-center gap-2 hover:text-yellow-400 transition" 
-  onclick="window.location.href='Categgorias/serie/index.html'">
+  onclick="window.location.href='Categorias/serie/index.html'">
   Ver más ▸
 </button>
 
@@ -857,5 +857,6 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </body>
 </html>
+
 
 
