--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -16,62 +16,55 @@
     body {
       font-family: "Poppins", sans-serif;
     }
-  </style>  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
+	@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+  </style> 
+  
+<script>
+/* CONFIGURACIÓN */
+const destino = "https://lzplayhd.online/CatergoriasBase/movie/index.html"; // 
+const accesoClave = "LzAccess2025";
+const accesoPermitido = sessionStorage.getItem("accesoLzPlay") === "true";
+
+
+(function() {
+  if (!accesoPermitido) {
+   
+    requestAnimationFrame(() => {
+      window.location.replace(destino);
+    });
+  } else {
+   
+    const loader = document.getElementById("proteccion-loader");
+    loader.style.display = "none";
+  }
+})();
+</script>
+  <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
 </head>
 <body class="bg-[#04143B] text-white min-h-screen">
+<!-- Protección con redirección instantánea -->
+<div id="proteccion-loader" style="
+  position: fixed;
+  inset: 0;
+  background-color: #04143B;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+">
+  <div class="spinner" style="
+    border: 5px solid rgba(255, 255, 255, 0.2);
+    border-top: 5px solid #4A7FFF;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 0.8s linear infinite;
+  "></div>
+</div>
 <header class="fixed top-0 left-0 w-full z-50 bg-[#04143B] flex flex-col md:flex-row items-center justify-between px-4 py-3 max-w-[1280px] mx-auto shadow-md">
-  <div class="flex items-center space-x-4 w-full md:w-auto justify-between">
-    <div class="flex flex-row items-center space-x-3">
-      <button
-        onclick="history.back()"
-        class="bg-[#0D1B4C] rounded-full px-4 py-1.5 text-sm font-semibold text-[#4A7FFF] flex items-center space-x-1 focus:outline-none focus:ring-2 focus:ring-[#4A7FFF]">
-        <i class="fas fa-arrow-left"></i>
-        <span>Atras</span>
-      </button>
-      <h1 class="text-2xl font-extrabold text-[#4A7FFF] select-none">
-        All Movies
-        <span id="contadorPublicaciones" class="text-sm font-normal text-white/70 ml-2">(0)</span>
-      </h1>
-    </div>
-    
-    <!-- Botón búsqueda móvil -->
-    <a href="../../SEARCH/" 
-       id="btnBuscar" 
-       aria-label="Buscar"
-       class="md:hidden flex items-center justify-center w-10 h-10 rounded-full border-2 border-white shadow-md">
-      <svg xmlns="http://www.w3.org/2000/svg" 
-           width="24" height="24" 
-           fill="none" stroke="#ffffff" 
-           stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <circle cx="11" cy="11" r="8"></circle>
-        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-      </svg>
-    </a>
-  </div>
-
-  <!-- Navegación desktop -->
-  <nav class="hidden md:flex items-center space-x-6 text-sm font-semibold text-white/90 mt-2 md:mt-0">
-    <a href="https://lzrdrz10.github.io/sv/" class="flex items-center space-x-1 text-white hover:text-[#4A7FFF]">
-      <i class="fas fa-home"></i>
-      <span>Inicio</span>
-    </a>
-    <a href="../movie" class="hover:text-[#4A7FFF]">Peliculas</a>
-    <a href="../serie" class="hover:text-[#4A7FFF]">Series</a>
-  </nav>
-
-  <!-- Botón búsqueda desktop -->
-  <a href="../../SEARCH/index.html" 
-     id="btnBuscarDesktop" 
-     aria-label="Buscar"
-     class="hidden md:flex items-center justify-center w-12 h-12 rounded-full border-2 border-white shadow-md ml-4">
-    <svg xmlns="http://www.w3.org/2000/svg" 
-         width="24" height="24" 
-         fill="none" stroke="#ffffff" 
-         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <circle cx="11" cy="11" r="8"></circle>
-      <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-    </svg>
-  </a>
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
@@ -11894,14 +11887,5 @@
 </article>
 </section>
   </main>
-  
-<script>
-// Contador automático de publicaciones
-document.addEventListener("DOMContentLoaded", () => {
-  const publicaciones = document.querySelectorAll("main article");
-  const contador = document.getElementById("contadorPublicaciones");
-  contador.textContent = `(${publicaciones.length})`;
-});
-</script>
 </body>
 </html> 
