--- a/PlataformasBase/anime/index.html
+++ b/PlataformasBase/anime/index.html
@@ -72,8 +72,8 @@
       <i class="fas fa-home"></i>
       <span>Inicio</span>
     </a>
-    <a href="../Categorias/movie/index.html" class="hover:text-[#4A7FFF]">Películas</a>
-    <a href="../Categorias/serie/index.html" class="hover:text-[#4A7FFF]">Series</a>
+    <a href="https://lzplayhd.online/CatergoriasBase/movie/index.html" class="hover:text-[#4A7FFF]">Películas</a>
+    <a href="https://lzplayhd.online/CatergoriasBase/serie/index.html" class="hover:text-[#4A7FFF]">Series</a>
   </nav>
 
   <a href="../../SEARCH/index.html" class="hidden md:flex items-center justify-center w-12 h-12 rounded-full border-2 border-white shadow-md ml-4">
