--- a/PlataformasBase/dreamworks/index.html
+++ b/PlataformasBase/dreamworks/index.html
@@ -29,9 +29,12 @@
     <a href="../../SEARCH/" class="md:hidden flex items-center justify-center w-10 h-10 rounded-full border-2 border-white shadow-md"><i class="fas fa-search"></i></a>
   </div>
   <nav class="hidden md:flex items-center space-x-6 text-sm font-semibold text-white/90 mt-2 md:mt-0">
-    <a href="https://lzrdrz10.github.io/sv/" class="flex items-center space-x-1 hover:text-[#4A7FFF]"><i class="fas fa-home"></i><span>Inicio</span></a>
-    <a href="../movie" class="hover:text-[#4A7FFF]">Películas</a>
-    <a href="../serie" class="hover:text-[#4A7FFF]">Series</a>
+    <a href="../../index.html" class="flex items-center space-x-1 hover:text-[#4A7FFF]">
+      <i class="fas fa-home"></i>
+      <span>Inicio</span>
+    </a>
+    <a href="https://lzplayhd.online/CatergoriasBase/movie/index.html" class="hover:text-[#4A7FFF]">Películas</a>
+    <a href="https://lzplayhd.online/CatergoriasBase/serie/index.html" class="hover:text-[#4A7FFF]">Series</a>
   </nav>
   <a href="../../SEARCH/index.html" class="hidden md:flex items-center justify-center w-12 h-12 rounded-full border-2 border-white shadow-md ml-4"><i class="fas fa-search"></i></a>
 </header>
