Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La vida de Calabacin -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jovenes Titanes en accion: la pelicula -->
+<li>
+  <a href="../Peliculas/movie138.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/c6DNJJyuqenEf0eEBXSi9sl7j7d.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Jóvenes Titanes en acción: la película 2018</span>
+    <span class="hidden">Parece que todos los grandes superhéroes están protagonizando sus propias películas, todos menos los Teen Titans. Robin está obligado y decidido a remediar esa situación al convertirse en una estrella en lugar de ser un compañero. Con algunas ideas locas y una canción en sus corazones, los Teen Titans se dirigen a Hollywood para cumplir sus sueños. Sin embargo, las cosas pronto van mal, cuando un supervillano planea apoderarse del planeta, poniendo en peligro la suerte de los jóvenes héroes.</span>
+  </a>
+</li>
+<!--FIN--><!-- La vida de Calabacin -->
 <li>
   <a href="../Peliculas/movie137.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
