--- a/Plataforma/dccomics/index.html
+++ b/Plataforma/dccomics/index.html
@@ -208,6 +208,26 @@ document.addEventListener("DOMContentLoaded", () => {
   </a>
   <div class="mt-2 font-semibold text-sm leading-tight truncate">Los jóvenes titanes en acción vs. Los jóvenes titanes</div>
   <div class="text-xs text-white/70">2019</div>
+</article><!-- Jovenes Titanes en accion: la pelicula -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie138.html">
+    <img src="https://image.tmdb.org/t/p/original/c6DNJJyuqenEf0eEBXSi9sl7j7d.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Jóvenes Titanes en acción: la película</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie74.html">
+    <img src="https://image.tmdb.org/t/p/original/7vN3qU5i1gJXHulz9d95YhwaU3q.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los jóvenes titanes en acción vs. Los jóvenes titanes</div>
+  <div class="text-xs text-white/70">2019</div>
 </article><!-- Batman: La Serie Animada -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie97.html">
