--- a/Plataforma/dccomics/index.html
+++ b/Plataforma/dccomics/index.html
@@ -206,7 +206,7 @@ document.addEventListener("DOMContentLoaded", () => {
       Movie
     </div>
   </a>
-  <div class="mt-2 font-semibold text-sm leading-tight truncate">Guasón 2: Folie à Deux</div>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Guasón 2: Folie a Deux</div>
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Guason -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
