--- a/PlataformasBase/dccomics/index.html
+++ b/PlataformasBase/dccomics/index.html
@@ -24,7 +24,7 @@
       <button onclick="history.back()" class="bg-[#0D1B4C] rounded-full px-4 py-1.5 text-sm font-semibold text-[#4A7FFF] flex items-center space-x-1">
         <i class="fas fa-arrow-left"></i><span>Atrás</span>
       </button>
-      <h1 class="text-2xl font-extrabold text-[#4A7FFF] select-none">Dccomics<span id="contadorPublicaciones" class="text-sm font-normal text-white/70 ml-2">(0)</span></h1>
+      <h1 class="text-2xl font-extrabold text-[#4A7FFF] select-none">DC Comics<span id="contadorPublicaciones" class="text-sm font-normal text-white/70 ml-2">(0)</span></h1>
     </div>
     <a href="../../SEARCH/" class="md:hidden flex items-center justify-center w-10 h-10 rounded-full border-2 border-white shadow-md"><i class="fas fa-search"></i></a>
   </div>
