Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -30,7 +30,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jovenes Titanes en accion: la pelicula -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mas alla del Infinito: Buzz y el viaje hacia Lightyear -->
+<li>
+  <a href="../Peliculas/movie139.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jlhxuo020oPYg9ha4INUGmVcR3H.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mas allá del Infinito: Buzz y el viaje hacia Lightyear 2022</span>
+    <span class="hidden">Explora la evolución de un ícono, siguiendo el camino de Buzz Lightyear desde el juguete hasta el Guardián Espacial en el que se inspiró la creación de ese juguete. Con cineastas, narradores, artistas y miembros del elenco de voces de Lightyear, el documental detalla cómo se realizó el diseño original de la figura de acción de Buzz y cómo esa apariencia se tradujo años después en el héroe real que protagoniza Lightyear.</span>
+  </a>
+</li>
+<!--FIN--><!-- Jovenes Titanes en accion: la pelicula -->
 <li>
   <a href="../Peliculas/movie138.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
